--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             esriConfig.apiKey = "AAPKaf959a9766dc47c2b3198ec31cb621caazyYuI6Rog2IMjlrHUqOmO3bGZ_NtrfDi4BWrfZcShB2nDof9rXV8Qlp3emEnR5Q";
             //添加底图
             var lyTile = new TileLayer({
-                url: "http://map.geoq.cn/ArcGIS/rest/services/ChinaOnlineStreetPurplishBlue/MapServer"
+                url: "http://http://map.geoq.cn/arcgis/rest/services/ChinaOnlineStreetWarm/MapServer"
             });
             var baseMap = new Basemap({
                 baseLayers: [lyTile]
