--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript">
         require(["esri/Map",
             "esri/Basemap",
-            "esri/layers/MapImageLayer",
+            "esri/layers/TileLayer",
             "esri/views/MapView",
             "esri/layers/GraphicsLayer",
             "esri/Graphic",
@@ -29,7 +29,7 @@
         ], (
             Map,
             Basemap,
-            MapImageLayer,
+            TileLayer,
             MapView,
             GraphicsLayer,
             Graphic,
@@ -37,7 +37,7 @@
         ) => {
             esriConfig.apiKey = "AAPKaf959a9766dc47c2b3198ec31cb621caazyYuI6Rog2IMjlrHUqOmO3bGZ_NtrfDi4BWrfZcShB2nDof9rXV8Qlp3emEnR5Q";
             //添加底图
-            var lyTile = new MapImageLayer({
+            var lyTile = new TileLayer({
                 url: "http://http://map.geoq.cn/arcgis/rest/services/ChinaOnlineStreetWarm/MapServer"
             });
             var baseMap = new Basemap({
@@ -49,6 +49,7 @@
             var view = new MapView({
                 container: "viewDiv",
                 map: map,
+                zoom: 12,
                 center: [106.56657791438427, 29.679927608558902]
             });
 
