--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 baseLayers: [lyTile]
             });
             var map = new Map({
-                basemap: baseMap
+                basemap: “topo-vector"
             });
             var view = new MapView({
                 container: "viewDiv",
