--- a/index.html
+++ b/index.html
@@ -1,50 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Create Map</title>
-    <link rel="stylesheet" href="https://js.arcgis.com/4.28/esri/themes/light/main.css" />
-    <script src="https://js.arcgis.com/4.28/"></script>
-    <style>
-        html,
-        body,
-        #viewDiv {
-            padding: 0;
-            margin: 0;
-            height: 100%;
-            width: 100%;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>获取点击处的经纬度</title>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.28/esri/themes/light/main.css" />
+  <script src="https://js.arcgis.com/4.28/"></script>
+  <style>
+    html,
+    body {
+      position: relative;
+      padding: 0;
+      margin: 0;
+    }
 
-    <script type="text/javascript">
-        require(["esri/Map",
-            "esri/views/MapView",
-        ], (
-            Map,
-            MapView,
-        ) => {
-            var map = new Map({
-                basemap: “topo-vector"
-            });
-            var view = new MapView({
-                container: "viewDiv",
-                map: map,
-                zoom: 12,
-                center: [106.56657791438427, 29.679927608558902]
-            });
+    .map {
+      width: 100vw;
+      height: 100vh;
+    }
 
-            //点击地图获取经纬度坐标
-            view.on("click", evt => {
-                let mapPoint = evt.mapPoint;
-                alert(`经度：${mapPoint.longitude},纬度${mapPoint.latitude}`);
-            });
-        });
-    </script>
+    .button {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="viewDiv"></div>
+  <div id="map" class="map"> </div>
+  <script>
+    var map, view;
+    var gisModules = {};
+    require([
+      "esri/Map",
+      "esri/WebMap",
+      "esri/views/MapView",
+      "esri/layers/WebTileLayer"
+    ], function (Map, WebMap, MapView, WebTileLayer) {
+      gisModules.Map = Map;
+      gisModules.WebMap = WebMap;
+      gisModules.MapView = MapView;
+      gisModules.WebTileLayer = WebTileLayer;
+
+      map = new gisModules.Map({
+        basemap: "streets"
+      });
+      view = new gisModules.MapView({
+        container: "map",
+        map: map,
+        zoom: 4,
+        center: [116, 39]
+      });
+	  
+	view.on("click", evt => {
+	let mapPoint = evt.mapPoint;
+	alert(`经度：${mapPoint.longitude},纬度${mapPoint.latitude}`);
+	});
+    });
+
+
+  </script>
 </body>
 
 </html>
