--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
       "esri/Map",
       "esri/WebMap",
       "esri/views/MapView",
-      "esri/layers/WebTileLayer"
-    ], function (Map, WebMap, MapView, WebTileLayer) {
+      "esri/layers/WebTileLayer",
+	                GraphicsLayer,
+            Graphic
+    ], function (Map, WebMap, MapView, WebTileLayer,GraphicsLayer,Graphic) {
       gisModules.Map = Map;
       gisModules.WebMap = WebMap;
       gisModules.MapView = MapView;
@@ -55,12 +57,45 @@
         center: [116, 39]
       });
 	  
-	view.on("click", evt => {
-	let mapPoint = evt.mapPoint;
-	alert(`经度：${mapPoint.longitude},纬度${mapPoint.latitude}`);
-	});
-    });
-
+//	view.on("click", evt => {
+//	let mapPoint = evt.mapPoint;
+//	alert(`经度：${mapPoint.longitude},纬度${mapPoint.latitude}`);
+//	});
+  //  });
+//添加含图片样式的几何要素
+            var graphic = new Graphic({
+                geometry: point,
+                symbol: symbol
+            });
+            var graphicsLayer = new GraphicsLayer();
+            graphicsLayer.visible = true;
+            var point = {
+                type: "point",
+                x: 106.56657791438427,
+                y: 29.679927608558902,
+                SpatialReference: 3857
+            };
+            var symbol = {
+                type: "picture-marker",
+                url: "train.png",//访问图片car.pngtrain.png
+                width: "50px",
+                height: "50px",
+                outline: {
+                    style: "solid"
+                },
+            };
+            var attributes = { name: '动车', content: '真是一辆漂亮的动车' };
+            var popupTemplate1 = {
+                title: "标题:" + attributes.name,
+                content: "内容:" + attributes.content
+            };
+            var graphic = new Graphic({
+                geometry: point,
+                symbol: symbol,
+                popupTemplate: popupTemplate1,
+            });
+            graphicsLayer.graphics.add(graphic);
+            map.add(graphicsLayer);
 
   </script>
 </body>
