--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       "esri/WebMap",
       "esri/views/MapView",
       "esri/layers/WebTileLayer",
-	                GraphicsLayer,
-            Graphic
+	                "GraphicsLayer",
+            "Graphic"
     ], function (Map, WebMap, MapView, WebTileLayer,GraphicsLayer,Graphic) {
       gisModules.Map = Map;
       gisModules.WebMap = WebMap;
