--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       view = new gisModules.MapView({
         container: "map",
         map: map,
-        zoom: 4,
-        center: [116, 39]
+        zoom: 16,
+        center: [106.56657791438427, 29.679927608558902]
       });
 	  
 //	view.on("click", evt => {
