--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         center: [106.56272626223878, 29.68290570918428]
       });
 	  
-	view.on("click", evt => {
-	let mapPoint = evt.mapPoint;
-	alert(`经度：${mapPoint.longitude},纬度${mapPoint.latitude}`);
-	});
+	//view.on("click", evt => {
+	//let mapPoint = evt.mapPoint;
+	//alert(`经度：${mapPoint.longitude},纬度${mapPoint.latitude}`);
+	//});
 
 	    //添加含图片样式的几何要素
             var graphic = new Graphic({
